[package]
name = "durak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
smol = "2.0.0"
futures-lite = "2.3.0"
futures = "0.3.30"
